# yogurt_sim

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE_MIT  README.md  book.toml  build.sh  compile.sh  index.html  package-lock.json
.cargo/: config.toml
.github/workflows/: ci.yml  schedule.yml
benches/: bench.rs
examples/: ball_game.rs  ocean.rs
server/: .gitignore  index.html  index.js  next.config.js  package-lock.json  package.json
server/pkg/: README.md  package.json  yogurt_sim.d.ts  yogurt_sim.js  yogurt_sim_bg.wasm.d.ts
server/src/app/: layout.tsx  page.tsx
server/src/app/components/: codeblocks.tsx
server/src/app/components/wasm/: init.ts
server/src/utils/: init.ts  init_wasm.ts
server/src/utils/wasm/: yogurt_sim.d.ts  yogurt_sim.js  yogurt_sim_bg.wasm.d.ts
server/src/wasm/: init.ts
src/: NOTES.md  Notes.md  SUMMARY.md  beginner.md  bevy_example.rs  lib.rs  main.rs  models.rs  shader.md  state.rs  window.rs
src/beginner/: buffer.md  camera.md  renderpipeline.md  shader.md  swap_chain.md  texture.md  uniform.md
src/bevy_examples/: ball_game.rs  bevy_rapier2d.rs  bevy_rapier3d.rs  lighting.rs  mod.rs
src/bevy_examples/ball_game/: mod.rs  systems.rs
src/bevy_examples/ball_game/game/: mod.rs  systems.rs
src/bevy_examples/ball_game/game/enemy/: mod.rs
src/bevy_examples/ball_game/game/player/: mod.rs  systems.rs
src/bevy_examples/ball_game/game/score/: mod.rs  systems.rs
src/bevy_examples/ball_game/game/star/: mod.rs
src/bevy_examples/ball_game/game/ui/game_over_menu/: mod.rs
src/bevy_examples/ball_game/game/ui/game_over_menu/systems/: interactions.rs  layout.rs  updates.rs
src/bevy_examples/ball_game/game/ui/hud/: mod.rs
src/bevy_examples/ball_game/game/ui/hud/systems/: layout.rs  updates.rs
src/bevy_examples/ball_game/game/ui/pause_menu/: mod.rs
src/bevy_examples/ball_game/game/ui/pause_menu/systems/: interactions.rs  layout.rs
src/bevy_examples/ball_game/main_menu/: mod.rs
src/bevy_examples/ball_game/main_menu/systems/: interactions.rs  layout.rs
src/bevy_water/: mod.rs  ocean.rs  ocean_simple.rs  param.rs  uv_sphere.rs  water.rs  wave.rs
src/bevy_water/water/: material.rs
src/components/: mod.rs  videos.rs
src/components/forms/: button.rs  form.rs  mod.rs  text_input.rs
src/components/videos/: layouts.css  layouts.rs  videos.rs
src/hooks/: store.rs
src/models/: mod.rs
src/shaders/: shader.wgsl
src/state/: buffer.rs  init_utils.rs  mod.rs  render_pipeline.rs  shader.wgsl  surface.rs  texture.rs  triangle.wgsl  vertex.rs
src/state/builder/: init.rs
src/state/components/: buffer.rs  camera.rs  mod.rs  texture.rs  vertex.rs
tests/: web.rs
